2013-04-23 Jérôme Pasquier  <rainbru@free.fr>

	* src/benchmark/Makefile.am: snacc generate files before building.
	* configure.in: implements with-benchmarks feature.

2013-04-22 Jérôme Pasquier  <rainbru@free.fr>

	* src/benchmark/main.cpp: finally BER ancoding works.

2013-04-20 Jérôme Pasquier  <rainbru@free.fr>

	* src/benchmark/ASNPerson.asn: start to use snacc.
	* src/benchmark/main.cpp: started benchmarks.

2013-04-18 Jérôme Pasquier  <rainbru@free.fr>

	* configure.in: first version building benchmark.
	* benchmark.hpp: some functions used to compute times.