@@ -5,7 +5,8 @@ rainbrurpg-network - GPLv3 - A serialization/network library.
 ==== ChangeLog ====
    (6 items by revision)
 
-* v0.0.0-0 (03 nov. 2012 - ???) 
+* v0.0.0-0 (03 nov. 2012 - ???)
+- Started deserialization benchmark with BSon
 - Finished project setup
 - Started benchmarks
 - Correct project setup
